--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .DS_Store
 .sass-cache
 build/
+source/images/example1.jpg
+source/images/example2.jpg
+source/images/example3.jpg
+source/images/example4.jpg
