Adjust example images and change the $shadow SCSS variable

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .DS_Store
 .sass-cache
 build/
+source/images/bricks.gif
 source/images/example1.jpg
 source/images/example2.jpg
 source/images/example3.jpg
-source/images/example4.jpg
